# pipelinekit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.superpowers/sdd/: task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md
docs/superpowers/plans/: 2026-07-13-pipelinekit-reorganization-plan.md
docs/superpowers/specs/: 2026-07-13-pipelinekit-reorganization-design.md
examples/: airflow_dag_example.py
forgeflow/: __init__.py
forgeflow/airflow/: __init__.py  hooks.py  operators.py  sensors.py
forgeflow/api/: __init__.py  main.py
forgeflow/cli/: __init__.py  main.py
forgeflow/config/: __init__.py  loader.py
forgeflow/connectors/: __init__.py  http.py  rest.py
forgeflow/core/: __init__.py  cache.py  connector.py  exceptions.py  rate_limiter.py  retry.py  sink.py  transformer.py  validation.py
forgeflow/destinations/: __init__.py  bigquery.py  duckdb.py  file.py  mongodb.py  postgres.py  s3.py
forgeflow/pipeline/: __init__.py  executor.py  loader.py
forgeflow/sinks/: __init__.py  bigquery.py  duckdb.py  file.py  mongodb.py  postgres.py  s3.py
forgeflow/sources/: __init__.py  http.py  rest.py
forgeflow/transformers/: __init__.py  filter.py  json_normalizer.py  schema_mapper.py
forgeflow/transforms/: __init__.py  filter.py  json_normalizer.py  schema_mapper.py
pipelinekit/: __init__.py
pipelinekit/api/: __init__.py  main.py
pipelinekit/cli/: __init__.py  main.py
pipelinekit/config/: loader.py
pipelinekit/core/: __init__.py  cache.py  connector.py  exceptions.py  rate_limiter.py  retry.py  sink.py  transformer.py  validation.py
pipelinekit/destinations/: bigquery.py  duckdb.py  file.py  mongodb.py  postgres.py  s3.py
pipelinekit/integrations/: __init__.py
pipelinekit/integrations/airflow/: __init__.py  hooks.py  operators.py  sensors.py
pipelinekit/pipeline/: __init__.py  executor.py
pipelinekit/sources/: http.py  rest.py
pipelinekit/transforms/: __init__.py  filter.py  json_normalizer.py  schema_mapper.py
tests/: test_jsonplaceholder_api.py  test_package_baseline.py  test_package_boundaries.py  test_pipeline_loader.py  test_pipelinekit_cli.py  test_pipelinekit_namespace.py  test_transformers.py
