[project]
name = "pipelinekit"
version = "0.2.0"
description = "Modern ETL framework for API ingestion, data transformation, and distribution with optional API and Airflow integrations"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Luiz Araujo", email = "luiz.dataeng@gmail.com"}
]
keywords = [
    "etl",
    "data-pipeline",
    "api-ingestion",
    "airflow",
    "data-engineering",
    "async",
    "rest-api",
    "data-transformation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/leduardoaraujo/pipelinekit"
Documentation = "https://pipelinekit.readthedocs.io"
Repository = "https://github.com/leduardoaraujo/pipelinekit"
Issues = "https://github.com/leduardoaraujo/pipelinekit/issues"

[project.optional-dependencies]
# Core extras
postgres = [
    "psycopg[binary]>=3.2.0",
]
duckdb = [
    "duckdb>=1.1.0",
]
bigquery = [
    "google-cloud-bigquery>=3.26.0",
    "pandas>=2.2.0",
]
s3 = [
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
]
mongodb = [
    "motor>=3.3.0",
    "pymongo>=4.6.0",
]
snowflake = [
    "snowflake-connector-python>=3.7.0",
]

# API extras
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

# Airflow integration
airflow = [
    "apache-airflow>=2.8.0",
]

# Development tools
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# All extras combined
all = [
    "psycopg[binary]>=3.2.0",
    "duckdb>=1.1.0",
    "google-cloud-bigquery>=3.26.0",
    "pandas>=2.2.0",
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "snowflake-connector-python>=3.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apache-airflow>=2.8.0",
]

[project.scripts]
pipelinekit = "pipelinekit.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/pipelinekit",
    "/forgeflow",
    "/config",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelinekit", "forgeflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
